# sync

./: .gitignore  Makefile  README.md  backup.py  main.py  pairs_with_worked_cache.example.yml  pyproject.toml  sync.py  worked_cache.py
src/: logging.py
src/sync/: __init__.py  github_sync.py  worked_cache.py
sync/: __init__.py  github_sync.py  logging.py  worked_cache.py
