[tool.poetry]
name = "sync"
version = "0.1.0"
description = ""
authors = ["Александр Рахмаев <rahmaevao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
loguru = "^0.6.0"
types-pyyaml = "^6.0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
