[tool.poetry]
name = "sync"
version = "0.1.0"
description = ""
authors = ["Александр Рахмаев <rahmaevao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
pygithub = "^2.1.1"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
ruff = "^0.1.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
